introduce query commands